--- a/assets/scss/layouts/__layouts-dir.scss
+++ b/assets/scss/layouts/__layouts-dir.scss
@@ -12,8 +12,7 @@ Unique combinations of layouts and base styles are imported here
 @import "navigation";
 @import "settings";
 @import "search";
-@import "header-home";
-@import "header-not-home";
+@import "header";
 @import "factory-feed";
 @import "related";
 @import "footer";
