--- a/assets/scss/post/_navigation.scss
+++ b/assets/scss/post/_navigation.scss
@@ -3,34 +3,11 @@
 --------------------------------------------------------------*/
 
 .post-navigation {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-areas: "previous next";
-  gap: 2rem;
-
-  &--single {
-    margin-bottom: 4rem;
-  }
-
-  @media #{$breakpoint__767--max} {
-    grid-template-columns: 1fr;
-    grid-template-areas: "next" "previous";
-  }
+  margin-top: 4rem;
+  display: inline-flex;
+  flex-direction: column;
 
   &__previous {
-    grid-area: previous;
-    justify-self: start;
-  }
-
-  &__next {
-    grid-area: next;
-    justify-self: end;
-  }
-
-  &__next,
-  &__previous {
-    @media #{$breakpoint__767--max} {
-      justify-self: center;
-    }
+    margin-top: 1rem;
   }
 }
