--- a/assets/scss/post/_single.scss
+++ b/assets/scss/post/_single.scss
@@ -3,27 +3,24 @@
 --------------------------------------------------------------*/
 
 .post-single {
-  padding: 4rem 0;
 
   .inner-wrapper {
-    border-left: $border-width__blockquote solid var(--color__highlight);
-    margin: 0 0 1rem 0;
-    padding-left: 2rem;
+    margin: 2rem 0 2rem (-$navbar__width);
+    padding-left: $navbar__width;
     position: relative;
+    max-width: 1200px;
 
     svg {
-      width: 1.5rem;
-      padding: .1rem 0 .5rem;
+      width: 5rem;
       box-sizing: content-box;
-      background: var(--color__wrapper);
       position: absolute;
       top: 0;
-      left: calc((1.5rem / -2) - (#{$border-width__blockquote} / 2));
+      left: 0;
     }
 
     p {
       font-family: $font-family__heading;
-      font-size: $font-size__h3;
+      font-size: clamp($font-size__h3, 2vw, $font-size__h1);
       line-height: 1.3;
       margin-top: 0;
     }
@@ -32,13 +29,6 @@
     &__status {
       > *:last-child {
         margin-bottom: 0;
-      }
-    }
-
-    &__quote,
-    &__link {
-      p {
-        font-size: clamp($font-size__h3, 2vw, $font-size__h1);
       }
     }
 
