--- a/assets/scss/components/_article.scss
+++ b/assets/scss/components/_article.scss
@@ -35,6 +35,12 @@
   }
 
   &__content {
+    &:after {
+      content: "";
+      clear: both;
+      display: table;
+    }
+
     h2, h3, h4, h5 {
       margin: 3rem 0 1.5rem 0;
     }
