--- a/assets/scss/layouts/_navigation.scss
+++ b/assets/scss/layouts/_navigation.scss
@@ -18,7 +18,6 @@
     }
   }
 
-
   &__icon {
     display: none;
 
@@ -26,8 +25,8 @@
       display: block;
       height: 3rem;
       fill: var(--color__highlight);
-      transition: all .15s ease-in-out;
-      margin-bottom: .5rem;
+      transition: all 0.15s ease-in-out;
+      margin-bottom: 0.5rem;
 
       &:hover,
       &:active {
@@ -42,6 +41,7 @@
     color: var(--color__text);
     font-family: $font-family__heading;
     font-size: $font-size__h4;
+    line-height: 1.8;
 
     &:hover {
       text-decoration: none;
@@ -56,7 +56,7 @@
     &--animation {
       position: relative;
       left: 0;
-      transition: all .25s ease-in-out;
+      transition: all 0.25s ease-in-out;
       cursor: pointer;
 
       @media #{$breakpoint__992--min} {
@@ -67,7 +67,7 @@
           z-index: -1;
           left: 0rem;
           opacity: 0;
-          transition: opacity .2s ease-in-out;
+          transition: opacity 0.2s ease-in-out;
         }
 
         &:hover {
@@ -76,7 +76,7 @@
           color: var(--color__text);
 
           &:before {
-            transition: opacity .25s ease-in-out;
+            transition: opacity 0.25s ease-in-out;
             opacity: 1;
           }
         }
@@ -115,7 +115,6 @@
     display: flex;
     justify-content: center;
     align-self: end;
-
 
     ul {
       display: flex;
