--- a/assets/scss/components/_article.scss
+++ b/assets/scss/components/_article.scss
@@ -14,14 +14,15 @@
       margin-right: 1.5rem;
 
       a {
-        margin-bottom: .25rem;
+        margin-top: 0.5rem;
+        margin-bottom: 0.5rem;
         display: inline-block;
       }
     }
 
     @media #{$breakpoint__991--max} {
       .posted-on {
-        margin-bottom: .25rem;
+        margin-bottom: 0.25rem;
       }
 
       .tags {
@@ -41,11 +42,16 @@
       display: table;
     }
 
-    h2, h3, h4, h5 {
+    h2,
+    h3,
+    h4,
+    h5 {
       margin: 3rem 0 1.5rem 0;
     }
 
-    p, ul, ol {
+    p,
+    ul,
+    ol {
       margin: 1.5rem 0;
     }
 
@@ -64,11 +70,9 @@
   }
 }
 
-
 .article,
 .page {
   &__content {
-
     > * {
       max-width: 750px;
     }
