--- a/assets/scss/layouts/_navigation.scss
+++ b/assets/scss/layouts/_navigation.scss
@@ -102,11 +102,23 @@
 }
 
 @media #{$breakpoint__991--max} {
+  [data-nav="left"] {
+    .main-navigation {
+      left: 0;
+      right: auto;
+    }
+  }
+
+  [data-nav="right"] {
+    .main-navigation {
+      right: 0;
+      left: auto;
+    }
+  }
+
   .main-navigation {
     bottom: 0;
     top: 0;
-    left: auto;
-    right: 0;
     z-index: 1;
     width: $navbar__width--mobile;
     padding: 0;
