--- a/assets/scss/layouts/_settings.scss
+++ b/assets/scss/layouts/_settings.scss
@@ -7,9 +7,13 @@
   bottom: 4rem;
   left: calc(50% - 4.6rem);
   width: 9.2rem;
-  height: 14.5rem;
   z-index: 3;
   display: none;
+  height: 17rem;
+
+  @media #{$breakpoint__992--min} {
+    height: 14.5rem;
+  }
 
   button,
   input {
@@ -35,8 +39,8 @@
   &__close {
     position: absolute;
     z-index: 5;
-    right: .5rem;
-    top: .5rem;
+    right: 0.5rem;
+    top: 0.5rem;
     cursor: pointer;
     line-height: 0;
   }
@@ -62,21 +66,23 @@
 }
 
 /*
- * Theme Switcher
+ * Theme & Nav Switcher
  * -----------------------------------------------------------
  */
 
-.theme-switch-wrapper {
+.theme-switch-wrapper,
+.nav-switch-wrapper {
   display: flex;
   align-items: center;
   justify-content: center;
 
+  .nav-switch,
   .theme-switch {
     display: inline-block;
     height: 1.5rem;
     position: relative;
     width: 3rem;
-    margin: 0 .5rem;
+    margin: 0 0.5rem;
 
     input {
       width: 100%;
@@ -103,17 +109,17 @@
       position: absolute;
       right: 0;
       top: 0;
-      transition: .4s;
+      transition: 0.4s;
 
       &:before {
         background-color: $color__white;
         content: "";
         position: absolute;
-        bottom: .15rem;
-        left: .15rem;
+        bottom: 0.15rem;
+        left: 0.15rem;
         height: 1.2rem;
         width: 1.2rem;
-        transition: .4s;
+        transition: 0.4s;
       }
 
       &.round {
@@ -124,6 +130,24 @@
         }
       }
     }
+  }
+}
+
+.nav-switch-wrapper {
+  margin-top: 1rem;
+
+  .nav-switch input:checked + .slider {
+    background-color: #555;
+  }
+
+  .nav-switch .slider {
+    background-color: #555;
+  }
+}
+
+@media #{$breakpoint__992--min} {
+  .nav-switch-wrapper {
+    display: none;
   }
 }
 
@@ -138,18 +162,17 @@
   flex-wrap: wrap;
   justify-content: space-between;
 
-
   input {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
     display: inline-block;
     position: relative;
-    margin: 0 0 .5rem 0;
+    margin: 0 0 0.5rem 0;
     padding: 0;
     height: 2rem;
     width: 2rem;
-    border: .2rem solid var(--color__text);
+    border: 0.2rem solid var(--color__text);
     border-radius: 50%;
     cursor: pointer;
     outline: none;
@@ -159,10 +182,10 @@
     }
   }
 
-  @include color-switch(amber,$color__amber);
-  @include color-switch(red,$color__red);
-  @include color-switch(pink,$color__pink);
-  @include color-switch(purple,$color__purple);
-  @include color-switch(blue,$color__blue);
-  @include color-switch(green,$color__green);
+  @include color-switch(amber, $color__amber);
+  @include color-switch(red, $color__red);
+  @include color-switch(pink, $color__pink);
+  @include color-switch(purple, $color__purple);
+  @include color-switch(blue, $color__blue);
+  @include color-switch(green, $color__green);
 }
