--- a/assets/scss/components/_tags.scss
+++ b/assets/scss/components/_tags.scss
@@ -12,8 +12,8 @@
 
   a {
     position: relative;
-    margin-right: .75rem;
-    margin-bottom: .25rem;
+    margin-right: 0.75rem;
+    margin-bottom: 0.25rem;
     display: inline-block;
     font-size: $font-size__small;
 
