--- a/assets/scss/gutenberg/_galleries.scss
+++ b/assets/scss/gutenberg/_galleries.scss
@@ -44,7 +44,12 @@
       padding: $margin__base;
       color: $color__white;
       text-align: center;
-      background: linear-gradient(0deg,rgba(0,0,0,.7),rgba(0,0,0,.3) 70%,transparent);
+      background: linear-gradient(
+        0deg,
+        rgba(0, 0, 0, 0.7),
+        rgba(0, 0, 0, 0.3) 70%,
+        transparent
+      );
 
       img {
         display: inline;
@@ -59,7 +64,7 @@
     }
 
     .blocks-gallery-item {
-      width: calc((100% - #{$margin__base})/2);
+      width: calc((100% - #{$margin__base}) / 2);
       margin: 0 $margin__base $margin__base 0;
       display: flex;
       flex-grow: 1;
@@ -93,17 +98,17 @@
     @for $i from 2 to 8 {
       $factor: $i - 1;
       &.columns-#{$i} .blocks-gallery-item {
-        width:calc((100% - #{$margin__base} * #{$factor})/#{$i});
-        margin-right: $margin__base
+        width: calc((100% - #{$margin__base} * #{$factor}) /#{$i});
+        margin-right: $margin__base;
       }
 
       &.columns-#{$i} .blocks-gallery-item:nth-of-type(#{$i}n) {
-          margin-right: 0
+        margin-right: 0;
       }
     }
   }
 
   .blocks-gallery-item:last-child {
-    margin-right: 0
+    margin-right: 0;
   }
 }
