--- a/assets/scss/page/_changelog.scss
+++ b/assets/scss/page/_changelog.scss
@@ -3,13 +3,12 @@
 --------------------------------------------------------------*/
 
 .changelog {
-
   h2 {
     font-size: 1.17rem;
-    margin-bottom: .5rem;
+    margin-bottom: 0.5rem;
   }
 
-	ul {
+  ul {
     list-style: none;
     padding-left: 0;
     margin-left: 1.5rem;
@@ -28,7 +27,7 @@
     color: var(--color__highlight);
     position: absolute;
     left: -1.5rem;
-    top: .35rem;
+    top: 0.35rem;
     width: 1rem;
     height: 1rem;
   }
