SP8-63 [UPDATE] fix margin for related content

--- a/assets/scss/layouts/_related.scss
+++ b/assets/scss/layouts/_related.scss
@@ -3,6 +3,15 @@
 --------------------------------------------------------------*/
 
 .related {
+  &--post {
+    margin-top: 4rem;
+
+    // within footer/sidebar
+    &.highlight {
+      margin-top: 0;
+    }
+  }
+
   &--factory {
     color: $color__white;
 
