--- a/assets/scss/layouts/_navigation.scss
+++ b/assets/scss/layouts/_navigation.scss
@@ -130,8 +130,9 @@
 
     ul {
       display: flex;
-      flex-direction: column-reverse;
+      flex-direction: column;
       align-items: center;
+      justify-content: end;
     }
 
     &__icon {
