--- a/assets/scss/layouts/_navigation.scss
+++ b/assets/scss/layouts/_navigation.scss
@@ -132,7 +132,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: end;
+      justify-content: flex-end;
     }
 
     &__icon {
