SP8-70 [UPDATE] simplify factory and storage grid
- use auto fit grid for storage and factory
- better naming convention for factory list

--- a/assets/scss/layouts/_related.scss
+++ b/assets/scss/layouts/_related.scss
@@ -13,12 +13,10 @@
   }
 
   &--factory {
-    color: $color__white;
-
-    @include bob-animation(article);
+    @extend .factory-list;
 
     &__items {
-      @extend .factory-feed__items;
+      @extend .factory-list__items;
     }
   }
 }
