--- a/assets/scss/page/_storage.scss
+++ b/assets/scss/page/_storage.scss
@@ -3,26 +3,15 @@
 --------------------------------------------------------------*/
 
 .storage {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(5rem, 1fr));
+  gap: $margin__base * 2 $margin__base;
 
   &__year {
-    flex-grow: 0;
-    flex-shrink: 0;
-    width: 7.5rem;
-
-    @media #{$breakpoint__767--max} {
-      width: 5.9rem;
-    }
-
-    h2 {
-      margin: 2rem 0 0 0;
-    }
-
     ul {
-      margin: 0 0 2rem 0;
-      list-style: none;
+      margin: 0;
       padding: 0;
+      list-style: none;
 
       li::before {
         content: none;
