SP8-69 [UPDATE] add breadcrumbs to pages
- fix some issues witth focus
- try to improve website outline

--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -55,6 +55,12 @@ a {
   &:focus {
     outline: $outline;
   }
+
+  &.img-link {
+    display: block;
+    padding: 0;
+    border: 0;
+  }
 }
 
 /*
