--- a/assets/scss/layouts/_navigation.scss
+++ b/assets/scss/layouts/_navigation.scss
@@ -26,7 +26,6 @@
       height: 3rem;
       fill: var(--color__highlight);
       transition: all 0.15s ease-in-out;
-      margin-bottom: 0.5rem;
 
       &:hover,
       &:active {
@@ -42,6 +41,10 @@
     font-family: $font-family__heading;
     font-size: $font-size__h4;
     line-height: 1.8;
+
+    &--home {
+      display: inline-block;
+    }
 
     &:hover {
       text-decoration: none;
