--- a/assets/scss/page/__page-dir.scss
+++ b/assets/scss/page/__page-dir.scss
@@ -8,6 +8,7 @@ Files inside this folder can contain specific styles for pages.
 */
 
 //Import Post files
-@import "storage";
+@import "box";
 @import "factory";
+@import "lab";
 @import "changelog";
