--- a/assets/scss/page/_box.scss
+++ b/assets/scss/page/_box.scss
@@ -1,8 +1,8 @@
 /*--------------------------------------------------------------
-#Storage
+#Box
 --------------------------------------------------------------*/
 
-.storage {
+.box {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(5rem, 1fr));
   gap: $margin__base * 2 $margin__base;
