SP8-81 [UPDATE] rename storage to box later

--- a/assets/scss/page/__page-dir.scss
+++ b/assets/scss/page/__page-dir.scss
@@ -8,7 +8,7 @@ Files inside this folder can contain specific styles for pages.
 */
 
 //Import Post files
-@import "box";
+@import "storage";
 @import "factory";
 @import "lab";
 @import "changelog";
