--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -111,6 +111,7 @@ $breakpoint__1921--min: (
 // CSS Variables
 :root {
   --color__highlight: #{$color__pink};
+  --plyr-color-main: #{$color__pink};
 
   --content-gap: 2rem;
 
@@ -137,19 +138,25 @@ $breakpoint__1921--min: (
 
 [data-color="amber"] {
   --color__highlight: #{$color__amber};
+  --plyr-color-main: #{$color__amber};
 }
 [data-color="red"] {
   --color__highlight: #{$color__red};
+  --plyr-color-main: #{$color__red};
 }
 [data-color="pink"] {
   --color__highlight: #{$color__pink};
+  --plyr-color-main: #{$color__pink};
 }
 [data-color="purple"] {
   --color__highlight: #{$color__purple};
+  --plyr-color-main: #{$color__purple};
 }
 [data-color="blue"] {
   --color__highlight: #{$color__blue};
+  --plyr-color-main: #{$color__blue};
 }
 [data-color="green"] {
   --color__highlight: #{$color__green};
+  --plyr-color-main: #{$color__green};
 }
