--- a/assets/scss/abstracts/_fonts.scss
+++ b/assets/scss/abstracts/_fonts.scss
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: "Recoleta";
-  src: url("/wp-content/themes/soapatrickeight/assets/fonts/Recoleta-Bold.ttf")
+  src: url("../fonts/Recoleta-Bold.ttf")
     format("truetype");
   font-weight: 700;
   font-style: normal;
@@ -13,7 +13,7 @@
 
 @font-face {
   font-family: "Lato";
-  src: url("/wp-content/themes/soapatrickeight/assets/fonts/Lato-300.woff2")
+  src: url("../fonts/Lato-300.woff2")
     format("woff2");
   font-weight: 300;
   font-style: normal;
@@ -22,7 +22,7 @@
 
 @font-face {
   font-family: "Lato";
-  src: url("/wp-content/themes/soapatrickeight/assets/fonts/Lato-400.woff2")
+  src: url("../fonts/Lato-400.woff2")
     format("woff2");
   font-weight: 400;
   font-style: normal;
@@ -31,7 +31,7 @@
 
 @font-face {
   font-family: "Lato";
-  src: url("/wp-content/themes/soapatrickeight/assets/fonts/Lato-700.woff2")
+  src: url("../fonts/Lato-700.woff2")
     format("woff2");
   font-weight: 700;
   font-style: normal;
